# serbert

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  TODO  configure  configure.ac  configure.in  serbert.c  serbert_config.h  serp.c  serp.h  seru.c  seru.h
.github/workflows/: c-cpp.yml
doc/: Makefile.am  Makefile.in  serbert.1  serbert.info  serbert.texi  usage.html
